--- a/public/styles.css
+++ b/public/styles.css
@@ -5,6 +5,12 @@
     font-style: normal;
 }
 
+@media (max-width: 700px) {
+    img {
+        width: 70%; /* 이미지 크기를 60%로 축소 */
+    }
+}
+
 body {
     background-color: black;
     text-align: center;
@@ -18,3 +24,38 @@ h1 {
     color:aliceblue;
     
 }
+
+#description {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+}
+
+.rounded-rectangle {
+    width: 30%;
+    height: 8vw;
+    border: 0.3vw solid aliceblue;
+    border-radius: 2vw;
+    margin: 0.5vw;
+    align-items: center;
+    
+  }
+
+@media screen and (max-width: 700px) {
+    #description {
+      flex-direction: column; /* 너비가 700px 이하일 때 세로로 정렬 */
+      align-items: center;
+    }
+
+    .rounded-rectangle {
+        width: 100%;
+        height: 15vw;
+        border: 0.5vw solid aliceblue;
+        border-radius: 3vw;
+        margin: 0.5vw;
+      }
+}
+  
+
