--- a/public/styles.css
+++ b/public/styles.css
@@ -5,7 +5,7 @@
     font-style: normal;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 800px) {
     img {
         width: 70%; /* 이미지 크기를 60%로 축소 */
     }
@@ -22,7 +22,20 @@ h1 {
 
 .white {
     color:aliceblue;
-    
+    font-family: 'Pretendard-Regular';
+}
+
+button {
+    color: aliceblue;
+    background-color: #002060;
+    border-radius: 30px;
+    border-color: aliceblue;
+    font-size: 25px;
+    font-family: 'Pretendard-Regular';
+    width: auto;
+    height: auto;
+    padding: 10px;
+    cursor: pointer;
 }
 
 #description {
@@ -30,32 +43,39 @@ h1 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 0;
+    margin: 20px 0; /* 수정된 부분 */
 }
 
 .rounded-rectangle {
     width: 30%;
-    height: 8vw;
+    height: clamp(20px, auto, auto);
     border: 0.3vw solid aliceblue;
     border-radius: 2vw;
     margin: 0.5vw;
+    padding: 2vw;
     align-items: center;
-    
-  }
+    display: flex; /* 추가된 부분 */
+    flex-direction: column; /* 추가된 부분 */
+    justify-content: center; /* 추가된 부분 */
+    line-height: 1.2;
+    font-size: clamp(16px, 2vw, 30px)
+}
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 1000px) {
+    img {
+        width: 70%;
+    }
+
     #description {
-      flex-direction: column; /* 너비가 700px 이하일 때 세로로 정렬 */
-      align-items: center;
+        flex-direction: column;
+        align-items: center;
     }
 
     .rounded-rectangle {
-        width: 100%;
-        height: 15vw;
+        width: 90%;
+        height: clamp(15vw, auto, auto);
         border: 0.5vw solid aliceblue;
         border-radius: 3vw;
         margin: 0.5vw;
-      }
+    }
 }
-  
-
