--- a/public/mainstyles.css
+++ b/public/mainstyles.css
@@ -58,7 +58,7 @@ h1 {
 
 
 /* 오브젝트 미리보기 메인페이지 */
-#recently {
+.objekt_grid {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     gap: 10px;
@@ -66,7 +66,7 @@ h1 {
 }
 
 
-#recently img {
+.objekt_grid img {
     width: 100%;
     height: auto;
 }
@@ -83,8 +83,12 @@ a {
 
 
 @media (max-width: 900px) {
-    #recently {
+    .objekt_grid {
         grid-template-columns: repeat(3, 1fr);
+    }
+    
+    .mb-pc {
+        width: 70%;
     }
 }
 
@@ -95,7 +99,11 @@ a {
 } */
 
 @media (min-width: 901px) and (max-width: 1300px) {
-    #recently {
+    .objekt_grid {
         grid-template-columns: repeat(4, 1fr);
+    }
+
+    .mb-pc {
+        width: 50%;
     }
 }
